Fix image alignment on mobile. Also fix description of the last carousel item

--- a/app/assets/stylesheets/dta/index.scss
+++ b/app/assets/stylesheets/dta/index.scss
@@ -113,6 +113,7 @@ ol.catalog {
     vertical-align: middle;
     margin-bottom: 10px;
     display: unset;
+    max-height: 400px;
   }
   tr {
     /*border-top: 2px #BACBE7 dotted;*/
@@ -128,6 +129,19 @@ ol.catalog {
 
   span.h4 {
       font-size: 15px;
+  }
+}
+
+@media (max-width: 767.75px) {
+  ol.catalog {
+    div.row {
+      div.col-sm-3 {
+        text-align: unset;
+        img {
+          margin-left: 8px;
+        }
+      }
+    }
   }
 }
 
